--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
 	"license": "ISC",
 	"dependencies": {
 		"body-parser": "^1.20.2",
+		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"pg": "^8.10.0",
+		"pg-hstore": "^2.3.4",
+		"sequelize": "^6.30.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.22"
